# ffmpeg-transcriber

./: .gitignore  README.md  package.json  plan.md  pyproject.toml  transcribe.js  transcribe.py
