[project]
name = "livetrans"
version = "0.1.0"
description = "Follow a growing Opus file and transcribe it with Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/Ritesh17rb/ffmpeg-transcriber"

[project.scripts]
transcribe = "transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["transcribe.py"]
